--- a/nltk/test nltk.ipynb
+++ b/nltk/test nltk.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "stopwords = set(stopwords.words('english'))\n",
     "from nltk.tokenize import RegexpTokenizer\n",
-    "tokenizer = RegexpTokenizer(r'[a-z][a-z]+')\n"
+    "tokenizer = RegexpTokenizer(r'[a-z][a-z]+')"
    ]
   },
   {
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "data = raw_data.drop(raw_data.columns[[1, 2, 3, 3, 4]], axis=1) "
+    "data = raw_data.drop(raw_data.columns[[1, 2, 3, 3, 4]], axis=1)"
    ]
   },
   {
@@ -981,7 +981,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -994,7 +996,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
